# Thales-Remote-Python

./: .gitignore  LICENSE  README.md  bc_mux_interface.py  cv_example.py  eis_example.py  eis_import_plot_example.ipynb  eis_import_plot_example.py  eis_pad4_example.ipynb  eis_pad4_example.py  general_example.py  ie_example.py  impedance_vs_parameter_example.ipynb  impedance_vs_parameter_example.py  main.py  pyproject.toml  sequencer_example.py
.github/workflows/: publish-to-pypi.yml
Examples/: LICENSE_jupyterlab  jupyter_utils.py
Examples/BCMuxInterface/: BCMuxInterface.ipynb  BCMuxInterface.py
Examples/BasicIntroduction/: BasicIntroduction.ipynb  BasicIntroduction.py
Examples/CVImportPlot/: CVImportPlot.ipynb  CVImportPlot.py
Examples/CurrentVoltageCurve/: CurrentVoltageCurve.ipynb  CurrentVoltageCurve.py
Examples/CyclicVoltammetry/: CyclicVoltammetry.ipynb  CyclicVoltammetry.py
Examples/DCSequencer/: DCSequencer.ipynb  DCSequencer.py
Examples/DynamicDCSequenceEIS/: DynamicDCSequenceEIS.ipynb  DynamicDCSequenceEIS.py  ocp_constant_current_template.txt
Examples/EIS/: EIS.ipynb  EIS.py
Examples/EISCVLaTeX/: EIS.csv  EISCVLaTeX.ipynb  EISCVLaTeX.py  report.tex  report_filled.tex
Examples/EISImportPlot/: EISImportPlot.ipynb  EISImportPlot.py
Examples/EISPad4/: EISPad4.ipynb  EISPad4.py
Examples/EISvsParameter/: EISvsParameter.ipynb  EISvsParameter.py
Examples/ExternalDeviceFRA/: ExternalDeviceFRA.ipynb  ExternalDeviceFRA.py
Examples/FileExchangeEIS/: FileExchangeEIS.ipynb  FileExchangeEIS.py
Examples/HeartBeat/: HeartBeat.ipynb  HeartBeat.py
Examples/HeartBeatLiveData/: HeartBeatLiveData.ipynb  HeartBeatLiveData.py
Examples/ImpedanceMultiCellCycle/: ImpedanceMultiCellCycle.ipynb  ImpedanceMultiCellCycle.py
Examples/ImpedanceRampHotSwap/: ImpedanceRampHotSwap.ipynb  ImpedanceRampHotSwap.py
Examples/LabVIEW/: LabVIEW.ipynb  LabVIEW.py  labview_wrapper.py  thales_remote_python.vi
Examples/LoadWithExternalSource/: LoadWithExternalSource.ipynb  LoadWithExternalSource.py
Examples/PolarizationAcq/: PolarizationAcq.ipynb  PolarizationAcq.py  polarization.txt
ThalesFileImport/: IsmImport.py  __init__.py
ThalesRemote/: ThalesRemoteConnection.py  ThalesRemoteError.py  ThalesRemoteScriptWrapper.py  __init__.py
delta_remote/: connection.py  original_delta_example.py  script_wrapper.py
thales_file_import/: __init__.py  isc_import.py  ism_import.py
thales_remote/: __init__.py  connection.py  epc_scpi_handler.py  error.py  file_interface.py  script_wrapper.py
