[project]
name = "thales_remote"
version = "5.7.0"
authors = [{ name = "Maximilian Krapp", email = "maximilian.krapp@zahner.de" }]
description = "library to control Zahner Zennium potentiostats"
keywords = [
    "potentiostat, electrochemistry, chemistry, eis, cyclic voltammetry, fuel-cell, battery",
]
readme = "README.md"
license = { file = "LICENSE" }
requires_python = ">=3.9"
dependencies = [
    "matplotlib",
    "pyserial",
    "numpy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Documentation"= "https://doc.zahner.de/zahner_potentiostat/index.html"
"Examples"= "https://github.com/Zahner-elektrik/Zahner-Remote-Python"
"Source Code"= "https://github.com/Zahner-elektrik/zahner_potentiostat"
"Bug Tracker"= "https://github.com/Zahner-elektrik/zahner_potentiostat/issues"
"Homepage" = "https://zahner.de/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
