[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thales_remote"
authors = [{ name = "Maximilian Krapp", email = "maximilian.krapp@zahner.de" }]
description = "Library to control Zahner Zennium potentiostats"
keywords = [
    "potentiostat", "electrochemistry", "chemistry", "eis", "cyclic voltammetry", "fuel-cell", "battery",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "zahner_analysis",
    "zahner_potentiostat",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Documentation"= "https://doc.zahner.de/thales_remote/"
"Examples"= "https://github.com/Zahner-elektrik/Thales-Remote-Python"
"Source Code"= "https://github.com/Zahner-elektrik/Thales-Remote-Python"
"Bug Tracker"= "https://github.com/Zahner-elektrik/Thales-Remote-Python/issues"
"Homepage" = "https://zahner.de/"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["thales_remote*"]  # package names should match these glob patterns (["*"] by default)


